<resources>
    <string name="app_name">edu-app</string>
    <string name="personPage_login">登录/注册</string>
    <string name="personPage_word">eduapp专注于教育的app</string>
    <string name="personPageOp_1">个人信息</string>
    <string name="personPageOp_2">我的课程</string>
    <string name="personPageOp_3">下载缓存</string>
    <string name="personPageOp_4">联系客服</string>
    <string name="login_text">登录</string>
    <string name="username_text">用户名</string>
    <string name="password_text">密码</string>
    <string name="login_title">济桓教育</string>
    <string name="register_text">注册</string>
    <string name="register_title">注   册</string>
    <string name="repeat_password_text">重复密码</string>
    <string name="back_to_login_text">已有账号，登录</string>
    <string name="add_practice_text">添加练习</string>
    <string name="delete_practice_text">删除练习</string>
    <string name="stu_practice_subject_math">数学</string>
    <string name="stu_practice_subject_chinese">语文</string>
    <string name="stu_practice_subject_english">英语</string>
    <string name="practicePage_practice_title">我的练习</string>
    <string name="coursePage_title">我的课程</string>
    <string name="coursePage_tab_1">直播课程</string>
    <string name="coursePage_tab_2">数学课程</string>
    <string name="coursePage_tab_3">语文课程</string>
    <string name="coursePage_tab_4">英语课程</string>
    <string name="coursePage_tab_5">其他课程</string>

    <string name="roomChat_tab_1">聊天记录</string>
    <string name="roomChat_tab_2">课程信息</string>

    <string name="exit_text">退出</string>
    <string name="input_question_text">输入题目</string>
    <string name="cancel_text">取消</string>
    <string name="picture">图片</string>
    <string name="add_question_text">添加题目</string>
    <string name="start_live_stream_text">开始直播</string>
    <string name="stop_text">停止</string>
    <string name="send_text">发送</string>
    <string name="start_text">开始</string>
    <string name="select_text">选择</string>
    <string name="fill_blank_text">填空</string>
    <string name="short_answer">简答</string>
    <string name="add_option_text">添加选项</string>
    <string name="correct_answer_text">正确答案</string>
    <string name="mute_text">静音</string>
    <string name="record_audio_text">录音</string>
    <string name="add_blank">添加空位</string>
    <string name="input_answer_text">输入答案</string>
    <string name="delete_question">删除题目</string>
    <string name="practicePage_doexam_submit">提交练习</string>
    <string name="stu_course_live_play_start">开始播放</string>
    <string name="judge">批改</string>
    <string name="back">返回</string>
    <string name="score">分数</string>
    <string name="title">标题</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="phone_number">电话号码</string>
    <string name="QQ">QQ</string>
    <string name="address">地址</string>
    <string name="age">年龄</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="account_type">账号类型</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="chat_mute">静音</string>
    <string name="chat_hands_free">免提</string>
    <string name="chat_refuse">拒接</string>
    <string name="chat_answer">接听</string>
    <string name="chat_hang_up">挂断</string>
    <string name="switch_voice">切到语音</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="close_camera">关闭摄像头</string>
    <string name="open_camera">开启摄像头</string>
    <string name="roomChat_tvTitle">课程名称</string>
    <string name="roomChat_tvTeacher">授课教师</string>
    <string name="roomChat_tvStartTime">开始时间</string>
    <string name="tv_roomId">房间号</string>

</resources>
