<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/title"
        android:id="@+id/practice_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/add_question_btn"
            android:text="@string/add_question_text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/delete_question"
            android:text="@string/delete_question"/>
    </LinearLayout>


    <ListView
        android:id="@+id/practice_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_practice_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_practice_text"/>

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/exit_text"/>
    </LinearLayout>

</LinearLayout>