<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/username_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/account_type"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/password_text"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text" />


            <RadioGroup
                android:id="@+id/type_rg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>

                <RadioButton
                    android:id="@+id/teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/teacher"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>

                <RadioButton
                    android:id="@+id/student"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/student"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"/>

            </RadioGroup>


            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textSize="20sp" />

    </LinearLayout>


</TableLayout>