<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/practicePage_subject_chinese"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/stu_practice_subject_chinese"
        android:background="@android:color/transparent"
        android:theme="@android:style/Theme.Translucent"

    ></Button>

    <Button
        android:id="@+id/practicePage_subject_math"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:theme="@android:style/Theme.Translucent"
        android:text="@string/stu_practice_subject_math"></Button>

    <Button
        android:id="@+id/practicePage_subject_english"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:theme="@android:style/Theme.Translucent"
        android:text="@string/stu_practice_subject_english"></Button>
</LinearLayout>