<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/stream_control_lo"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <cn.nodemedia.NodeCameraView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:id="@+id/button_lo"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/stop_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_text"/>

            <Button
                android:id="@+id/mute_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute_text" />

            <Button
                android:id="@+id/single_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_camera"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>