<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical">

    <android.widget.LinearLayout
        android:id="@+id/personPage_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--头像-->
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher"></ImageButton>

        <android.widget.LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10sp"
            android:orientation="vertical">
            <!--登录-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/personPage_login"
                android:textStyle="bold"
                android:textSize="20sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/personPage_word"
                android:textSize="15sp"></TextView>
        </android.widget.LinearLayout>
    </android.widget.LinearLayout>
    <!--个人信息-->
    <android.widget.LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:id="@+id/personPage_stuInfo"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:src="@mipmap/ic_personinfo"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15sp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/personPageOp_1"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200sp"
            android:layout_weight="0.5"
            android:src="@mipmap/ic_jiantou"></ImageView>
    </android.widget.LinearLayout>
    <!--我的课程-->
    <android.widget.LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:id="@+id/personPage_stuCourse"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:src="@mipmap/ic_course"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15sp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/personPageOp_2"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200sp"
            android:layout_weight="0.5"
            android:src="@mipmap/ic_jiantou"></ImageView>
    </android.widget.LinearLayout>
    <!--我的下载-->
    <android.widget.LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:id="@+id/personPage_stuDownload"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:src="@mipmap/ic_history"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15sp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/personPageOp_3"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200sp"
            android:layout_weight="0.5"
            android:src="@mipmap/ic_jiantou"></ImageView>
    </android.widget.LinearLayout>
    <!--联系客服-->
    <android.widget.LinearLayout
        android:id="@+id/personPage_contactCS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:src="@mipmap/ic_contact"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15sp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/personPageOp_4"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="200sp"
            android:layout_weight="0.5"
            android:src="@mipmap/ic_jiantou"></ImageView>
    </android.widget.LinearLayout>
</android.widget.LinearLayout>
