<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/personPage_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <!--头像-->
        <ImageButton
            android:id="@+id/personPage_bt_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@mipmap/ic_launcher_foreground"></ImageButton>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/personPage_word"
                android:textSize="15sp"></TextView>
        </LinearLayout>
    </LinearLayout>
    <!--个人信息-->
    <RelativeLayout
        android:id="@+id/personPage_stuInfo"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:src="@mipmap/ic_personinfo"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/personPageOp_1"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ic_jiantou"></ImageView>
    </RelativeLayout>
    <!--我的课程-->
    <RelativeLayout
        android:id="@+id/personPage_stuCourse"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"

            android:src="@mipmap/ic_course"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"

            android:text="@string/personPageOp_2"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"

            android:src="@mipmap/ic_jiantou"></ImageView>
    </RelativeLayout>

    <!--联系客服-->
    <RelativeLayout
        android:id="@+id/personPage_contactCS"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"

            android:src="@mipmap/ic_contact"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"

            android:text="@string/personPageOp_4"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ic_jiantou"></ImageView>
    </RelativeLayout>
</LinearLayout>
